formacionDocker/kubernetes/codely.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-08-31T23:32:16Z"
  labels:
    run: hello-world
  managedFields:
  - apiVersion: v1
    manager: kubectl
    operation: Update
    time: "2020-08-31T23:32:16Z"
  name: hello-world
  namespace: default
  resourceVersion: "20353"
  selfLink: /api/v1/namespaces/default/pods/hello-world
  uid: ce33be1a-0d14-4459-80f1-7e1b91d32f2a
spec:
  containers:
  - args:
    - dry-run
    image: fiunchinho/codely-docker:latest
    imagePullPolicy: Always
    name: hello-world
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-vtxxv
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-vtxxv
    secret:
      defaultMode: 420
      secretName: default-token-vtxxv
status:
  phase: Pending
  qosClass: BestEffort
