formacionDocker/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: formacion
  name: formacion
spec:
  containers:
  - image: jorgecorral/formacion:latest
    name: formacion
    ports:
    - containerPort: 80
      name: http 
    resources: {}
    #livenessProbe:
    #   httpGet:
    #      path: /
    #      port: http
    #readinessProbe:
    #   httpGet:
    #      path: /
    #      port: http
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
