formacionDocker/kubernetes/podFormacion_ori.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-08-31T19:49:45Z"
  labels:
    run: formacion4
  managedFields:
  - apiVersion: v1
    manager: kubectl
    operation: Update
    time: "2020-08-31T19:49:45Z"
  name: formacion3
  namespace: default
  resourceVersion: "10792"
  selfLink: /api/v1/namespaces/default/pods/formacion3
  uid: a09bb499-823e-4318-b68a-e44ad6008c57
spec:
  containers:
  - args:
    - dry-run
    image: jorgecorral/formacion
    imagePullPolicy: Always
    name: formacion3
    ports:
    - containerPort: 80
      protocol: TCP
    resources: 
        limits:
           cpu:50m
           memory: 128mi
        request:
           cpu:50m
           memory: 128mi
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-vtxxv
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-vtxxv
    secret:
      defaultMode: 420
      secretName: default-token-vtxxv
status:
  phase: Pending
  qosClass: BestEffort
