formacionDocker/kubernetes/formacionService.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-09-01T03:59:43Z"
  labels:
    run: formacion
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:run: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":80,"protocol":"TCP"}:
            .: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:run: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl
    operation: Update
    time: "2020-09-01T03:59:43Z"
  name: formacion
  namespace: default
  resourceVersion: "28298"
  selfLink: /api/v1/namespaces/default/services/formacion
  uid: a0409ebe-e4d6-4188-bf41-87b760a4babd
spec:
  clusterIP: 10.101.121.182
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: formacion
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
